# Antropic_win

./: .env  EMAIL_SETUP.md  README.md  UserProfileForm.jsx  agent_ids.txt  author_metrics.py  beyond_presance.py  created_agents.json  final_analysis_output.json  frontend_form.html  last_call_20250925_110017.json  pyproject.toml  requirements.txt  sample_instructions.txt
Sparsh_code/Complete workflow/: founder_analysis_orchestrator.py  main.py
backend/: fastapi_server.py
backend/app/: agentic_workflow_main.py
backend/data_storage/: prospects_10.json  prospects_11.json  prospects_12.json  prospects_13.json  prospects_14.json  prospects_15.json  prospects_2.json  prospects_3.json  prospects_4.json  prospects_5.json  prospects_6.json  prospects_7.json  prospects_8.json  prospects_9.json
backend/tests/: test_linkedin_agent.py  test_openalex_agent.py
frontend/: README.md  index.html  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/supabase/: config.toml
output_samples/: analysis_report.json  sample_frontend_input.json  sample_interview_analysis_input.json
transcripts/: transcript_conv_5401k60yx9f3fp0sg56ca3xmk7b8_20250925_193422.json  transcript_conv_6301k61089kzeg0b2xn31k7jd8dk_20250925_200033.json  transcript_conv_7301k60yxt5kft69qgswea2x3cbn_20250925_193423.json
user_profiles/: profile_20250925_134854_6712.json  profile_20250925_134901_6712.json
workflow/: Guide.txt  Linkedin_Scraping.txt  github_scraping.txt  input.txt  openalex.txt  openalex_v2.txt
workflow/interview_analysis/: founder_compatibility_analysis_20250925_163623.json
(+57 files in other folders)
